﻿# MantisBT - A PHP based bugtracking system
# MantisBT is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# MantisBT is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with MantisBT.  If not, see <http://www.gnu.org/licenses/>.

#
#  FileUploader Plugin :  - Allow you to send mutiple file in bug with drag & drop
#  This plugin use the folowing librairies :
#  - Jquery-FileDrop : https://github.com/weixiyen/jquery-filedrop
#  - Le tutoriel suivant : http://tutorialzine.com/2011/09/html5-file-upload-jquery-php/
#  - Le script d'upload https://github.com/mantisbt-plugins/PastePicture/blob/master/PastePicture/pages/bug_file_add.php
#
#  © Hennes Hervé <contact@h-hennes.fr>
#    2015-2016
#  http://www.h-hennes.fr/blog/

2014-12-18 : V 0.1.0 : Version initiale du module
2015-02-06 : V 0.1.1 : Optimisation traductions
2015-06-10 : V 0.1.2 : Gestion des traductions dans la page d'upload et dans le javascript
2015-06-11 : V 0.2.0 : Mise en place d'une page de configuration qui permets de définir : Nombre de fichiers maximum à envoyer, Taille Maximum des fichiers, Extensions de fichiers autorisés
2015-06-11 : V 0.2.1 : Correctifs Trads
2016-02-16 : V 0.2.2 : Correctifs Traductions js 
2016-07-22 : V 0.2.3 : Changements header + traduction des commentaires en anglais // Header changes + translation of all code comments in english.
2016-07-30 : V 0.3.0 : Maj pour mantis 1.3 // Upgrade for mantis 1.3